--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -10,6 +10,9 @@
   },
   "dependencies": {
     "axios": "^1.12.2",
+    "bootstrap": "^5.3.8",
+    "bootstrap-icons": "^1.13.1",
+    "chart.js": "^4.5.1",
     "vue": "^3.5.22",
     "vue-router": "^4.6.3"
   },
